<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABD4DA"
    tools:context=".info_page">


    <ImageView
        android:id="@+id/arrow_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:elevation="3dp"
        android:visibility="visible"
        app:layout_constraintVertical_bias="0.272"
        app:srcCompat="@drawable/arrow_forward" />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        android:textColor="#2196F3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/edit_profile"
        android:textColor="#2196F3"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/gradient"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_bg"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/circular_bg"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp">

                                    <ImageView
                                        android:id="@+id/imageView4"
                                        android:layout_width="70dp"
                                        android:layout_height="60dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintHorizontal_bias="0.529"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintVertical_bias="0.272"
                                        app:srcCompat="@drawable/add_photo" />
                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/circular_bg"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp">

                                    <ImageView
                                        android:id="@+id/imageView4"
                                        android:layout_width="70dp"
                                        android:layout_height="60dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintHorizontal_bias="0.529"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintVertical_bias="0.272"
                                        app:srcCompat="@drawable/settings" />
                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/circular_bg"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp">

                                    <ImageView
                                        android:id="@+id/imageView4"
                                        android:layout_width="70dp"
                                        android:layout_height="60dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintHorizontal_bias="0.529"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintVertical_bias="0.272"
                                        app:srcCompat="@drawable/baseline_notifications" />
                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/password"
                                android:textColor="#182693"
                                android:textSize="19sp" />


                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="82dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/change"
                                android:textAlignment="viewEnd"
                                android:textSize="19sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/email"
                                android:textColor="#182693"
                                android:textSize="19sp" />


                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="82dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/change"
                                android:textAlignment="viewEnd"
                                android:textSize="19sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/dob"
                                android:textColor="#182693"
                                android:textSize="19sp" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="82dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/change"
                                android:textAlignment="viewEnd"
                                android:textSize="19sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/adhar_number"
                                android:textColor="#182693"
                                android:textSize="19sp" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="82dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/change"
                                android:textAlignment="viewEnd"
                                android:textSize="19sp" />

                        </LinearLayout>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="131dp"
                        android:layout_height="122dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.521"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile_img_girl" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="+91 9876543210"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="0.4"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>